--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"></meta>
@@ -13,13 +14,12 @@
 
 <body>
 	<div class="container">
-		<div class="header clearfix">
-			<!-- <nav class="navbar navbar-default navbar-fixed-top"> -->
+		<div class="header clearfix"  sec:authorize="isAnonymous()">
 			<nav class="nav nav-pills pull-right">
 				<div class="container">
 					<a type="button"
 						class="btn btn-link navbar-btn navbar-right" href="/user/registration">
-						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 						Sign up
 					</a>
 					<a type="button"
@@ -27,15 +27,24 @@
 						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
 						Sign in
 					</a>
-					<a type="button"
-						class="btn btn-default navbar-btn navbar-right" href="/home">
-						<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-						Home
-					</a>
 				</div>
 			</nav>
 		</div>
-		<div class="row"></div>
+		<div class="header clearfix" sec:authorize="isAuthenticated()">
+			<nav class="nav nav-pills pull-right">
+				<div class="container">
+					<a class="navbar-brand" sec:authentication="name">Welcome, </a>
+			        <form th:action="@{/logout}" method="post" class="control-group">
+			            <input type="submit" value="Sign Out" class="btn btn-warning navbar-btn navbar-right"/>
+			            <a type="button"
+							class="btn btn-primary navbar-btn navbar-right" href="/user/profile">
+							<span aria-hidden="true" class="glyphicon glyphicon-user"></span>
+							Profile
+						</a>
+			        </form>
+				</div>
+			</nav>
+		</div>
 		<div class="jumbotron">
 			<h1 class="text-center"	>Piattaforma Social Trasporto Torino</h1>
 			<p></p>
