--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -22,6 +22,11 @@
 						<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 						Home
 					</a>
+					<a type="button"
+						class="btn btn-default navbar-btn navbar-right" href="/login">
+						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+						Sign in
+					</a>
 				</div>
 			</nav>
 		</div>
@@ -30,11 +35,11 @@
 			<h1 class="text-center">Registration</h1>
 		</div>
 		<p></p>
-		<form class="form-horizontal centered" th:action="@{/user/registration}" th:object="${user}"
+		<form class="form-horizontal" th:action="@{/user/registration}" th:object="${user}"
 			method="POST" enctype="utf8">
 			<div class="form-group">
 				<label class="col-sm-2 control-label">Nickname</label>
-				<div class="col-sm-10">
+				<div class="col-md-6">
 					<input th:field="*{nickName}" />
 				</div>
 			</div>
@@ -44,6 +49,14 @@
 					<input type="email" th:field="*{email}" />	
 				</div>
 			</div>
+
+			<div class="form-group">
+				<label class="col-sm-2 control-label">Years</label>
+				<div class="col-md-6">
+					<input type="number" th:field="*{years}" />
+				</div>
+			</div>
+			
 			<div class="form-group">
 				<label class="col-sm-2 control-label">Password</label>
 				<div class="col-sm-10">
@@ -56,6 +69,7 @@
 					<input type="password" th:field="*{matchingPassword}" />
 				</div>
 			</div>
+			
 			<div class="form-group">
 				<div class="col-sm-offset-2 col-sm-10">
 					<input type="submit" value="Sign up" class="btn btn-default"/>
