Ultimi aggiornamenti - Real time WebSocket

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+	    <script src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+	<script type="text/javascript" src="/app.js"></script>
 </head>
 
 <body>
@@ -51,8 +54,8 @@
 		</div>
 		<div class="row">
 			<div class="col-md-4">
-				<a type="button" class="btn btn-primary	btn-lg btn-block"
-					href="/home"> <span class="glyphicon glyphicon-comment"
+				<a type="button"  class="btn btn-primary	btn-lg btn-block"
+					href="/index" > <span class="glyphicon glyphicon-comment"
 					aria-hidden="true"></span> Bus / Metro
 				</a>
 			</div>
