Implementato solo con data. Abbiamo inserito dentro mongo anche una string k contiene il nome dell'immagine

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -73,6 +73,10 @@
 					aria-hidden="true"></span> Giro in Bici
 				</a>
 			</div>
+			
+			
+			<img th:src="@{/images/donna.png}" src="../images/donna.png"/>
+			 
 		</div>
 	</div>
 
