--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -104,6 +104,45 @@
 					</select>
 				</div>
 			</div>
+			
+			
+			
+			
+			<div class="form-group">
+				<label class="col-sm-2 control-label">Scegli un'icona</label>
+				<div class="radio col-sm-10">
+					<label>
+						<input type="radio" name="radioImage"  value="donna"  th:field="*{StringImage}"></input>
+						<img th:src="@{/images/donna.png}" src="../images/donna.png"  height="75"  width="75" />
+					</label>
+					<label>
+						<input type="radio" name="radioImage"  value="donna2" th:field="*{StringImage}"></input>
+						<img th:src="@{/images/donna2.png}" src="../images/donna2.png"  height="75"  width="75"  />
+					</label>
+					<label>
+						<input type="radio" name="radioImage"  value="donna3" th:field="*{StringImage}"></input>
+						<img th:src="@{/images/donna3.png}" src="../images/donna3.png"  height="75"  width="75" />
+					</label>
+					<label>
+						<input type="radio" name="radioImage"  value="uomo" th:field="*{StringImage}"></input>
+						<img th:src="@{/images/uomo.png}" src="../images/uomo.png"  height="75"  width="75" />
+					</label>
+					<label>
+						<input type="radio" name="radioImage"  value="uomo2" th:field="*{StringImage}"></input>
+						<img th:src="@{/images/uomo2.png}" src="../images/uomo3.png"  height="75"  width="75"  />
+					</label>
+					<label>
+						<input type="radio" name="radioImage"  value="uomo3" th:field="*{StringImage}"></input>
+						<img th:src="@{/images/uomo3.png}" src="../images/uomo3.png" height="75"  width="75" />
+					</label>
+				</div>
+			</div>
+			
+			
+			
+			
+			
+			
 
 			<div class="form-group">
 				<label class="col-sm-2 control-label">Eta</label>
