Manca solo l'immagine. Abbiamo avuto dei problemi e abbiamo commentato il tutto. Ci spiace!!!

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,8 +65,11 @@
 	                
 	                <tbody >
 	                
-	                	<tr th:each="attr: ${messaggi}">
+	                	<tr th:each="attr: ${messaggi}" >
+	                    	<!-- <img th:src="@{/attr.getImmagine}" src=attr.getImmagine/>-->
+	                    	
 	                    	<th th:text="${attr}"></th>
+	                    	
 	                	</tr>
 	                
 	                </tbody>
