--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -108,7 +108,7 @@
 			
 			
 			
-			<div class="form-group">
+			<!-- <div class="form-group">
 				<label class="col-sm-2 control-label">Scegli un'icona</label>
 				<div class="radio col-sm-10">
 					<label>
@@ -136,7 +136,7 @@
 						<img th:src="@{/images/uomo3.png}" src="../images/uomo3.png" height="75"  width="75" />
 					</label>
 				</div>
-			</div>
+			</div> -->
 			
 			
 			
