Default Image in the chat messages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
 	                
 	                	<tr th:each="attr: ${messaggi}" >
 	                    	<!-- <img th:src="@{/attr.getImmagine}" src=attr.getImmagine/>-->
-	                    	
+	                    	<th><img th:src='@{/images/uomo.png}' src='../images/uomo.png' class='img-rounded' width='36' height='36'/></th>
 	                    	<th th:text="${attr}"></th>
 	                    	
 	                	</tr>
